fix capturereplaycontainer overflow defect

--- a/mycrt-gui/src/components/Pages/CaptureReplayItem.css
+++ b/mycrt-gui/src/components/Pages/CaptureReplayItem.css
@@ -5,6 +5,7 @@
   flex-direction: row;
   background: white;
   margin-right: 10px;
+  margin-top: 10px;
   border-radius: 5px;
   padding-right: 5px;
 }
